<resources>
    <string name="facebook_app_id">155235578298611</string>
    <string name="fb_login_protocol_scheme">fb155235578298611</string>
    <string name="app_name">Günlük Burçlar</string>
    <string name="action_share">Paylaş</string>
    <string name="chooseaction">Bir eylem seçin:</string>
    <string name="deleted">Öğe favorilerinizden silindi&#8230;</string>
    <string name="exit">Çıkmak için tekrar dokunun</string>
    <string name="drawer_open">Sol menü açık</string>
    <string name="drawer_close">Sol menü kapalı</string>
    <string name="burclaryazisi">Burcunuzu seçin</string>
    <string name="dogumsaatiyazisi">Doğum saatinizi seçin</string>
    <string name="spinnerdialog">Burcunuzu seçin</string>
    <string name="koc">KOÇ (21 Mart - 20 Nisan)\n\nBu burç, ilk çağlarda, savaşçı, palavracı yapısı nedeniyle horozla sembolize edilirdi. Ancak daha sonra, sert, saldırgan, girişken, kavgacı ve cinselliğe düşkün yapısı nedeniyle, koç ile temsil edilmeye başlandı. Koçun boynuzlarını gösteren bu sembol, sürünün güvenilir, saldırgan, erkeksi yanını, yiğitliğini ortaya koymak isteyen liderini anlatır.\n\nZodyak kuşağının ilk burcu olan, öncü nitelikteki Koç, hayat siklusunun başlangıcı olarak nitelendirilir. İnsanın hayata gözlerini açması, hayata doğması, yaşama başlamasıdır. Her zaman başlangıçları, doğumları, ilkleri, öncüleri ifade eder .Koç, klasik astrolojide, kendine güveni, kişiliği, fiziksel vücut şeklini ve görünümünü, ilk aile çevresini, yeni doğan çocuğun kendine güven oluşturma sürecini ve süreç içinde alınan etkileri anlatır. Yeni doğan bebeğin, ilk etapta, tanıdığı, bildiği tek şey "Ben"dir. Dolayısıyla, kendi vücudu, kendi egosu, kendi ihtiyaç ve duyguları her şeyden daha önemlidir.\n\nYaşama bağlılık ve sağ kalabilme iç güdüsü ile doğmuştur. Temel amacı, hayatın akışına adapte olabilme yeteneğini geliştirmektir. Ancak, kuralların varlığından ve bir düzenin olabileceğinden de habersizdir. Dolayısıyla, her şeye direkt ve iç güdüsel yaklaşımlarda bulunması, plansız programsız hareket etmesi de doğaldır.</string>
    <string name="boga">BOĞA (21 Nisan - 20 Mayıs)\n\nBoğa burcu, kafasında alışılmadık büyüklükte boynuzlar taşıyan bir boğa başı ile sembolize edilir.Kuvvetli bir yapıya sahip ve malına düşkün bu hayvan, gerektiğinde atağa geçebilme özelliği ile klasik Boğa tipi ile özdeşleştirilir."Kutsal Boğa" ya da "Altın Boğa" olarak nitelendiriliren Boğa ya da Baal, Asurların dini ayinlerinin temelini oluşturur.Günümüzdeki Mayıs festivali, Güneş\'in Boğa\'ya girdiği zamanlarda, Mısır\'da kutlanan eski festivallerin kalıntısıdır. Koç burcuyla hayata doğan çocuk, Boğa döneminde kendine, kişiliğine olan güvenini kazanarak fiziksel dünyaya enerjilerini kanalize edecek hale gelir.Aşamalı olarak duyularını keşfetmeye, çevresindeki ve kendisindeki fiziksel dünyayı araştırmaya, gözlemlemeye başlamıştır. Bu aşamada nesnelerin farkına varmaya başlar ve etrafında tanıdığı tanımadığı tüm objelere duyularını yöneltir.İleride yaşanacak sahiplik, hizmet, mali olaylara ve bunlarla ilgili kavramlarda direkt olarak bir etkileşim yaratan, araştırıp, öğrenebileceği ne kadar çok çeşitlilikte yiyecek, obje, insan ve farklı ortamlar olursa, fiziksel dünya hakkındaki görüşleri o kadar gelişkin bir hale gelecektir. Bu dönemde duyularını kullanarak algıladığı her ses, lezzet, görüntü, koku, ileride geliştireceği estetik duygusuna da zemin hazırlar. Bu devrede ilişkide bulunulan insanlar duygusal tepkimeleri yaşatan kaynaklar olarak kabul edilebilir.</string>
    <string name="ikizler">İKİZLER (21 Mayıs - 20 Haziran)\n\nRomen rakamı iki (II) İkizler burcunun sembolüdür. Dualiteyi ve iki zihnin hiç bir zaman birbirine benzemediğini sembolize eder.Çinliler Maymun\'u İkizler burcu ile özdeşleştirerek, günümüzde de hala var olan üç maymun ile sembolize etmişlerdir.Kimi zaman el ele tutuşmuş bir kadın bir erkek hatta, Adem ve Havva ile temsil edilen İkizler burcu, Babilliler tarafından "Kapı\'nın İki Kutsal Tanrısı" olarak yorumlanır. İkizler aşaması, çocuğun hayatında, daha evvelki iki aşamanın artık bir senteze ulaşmasıdır. Koç\'ta kazanılan kendine ve ilk çevreye güven duygusunun, Boğa\'da fiziksel dünyaya uygulanması ile bir hareket kazanılmakta ve dahası iletişim başlamaktadır. Bu evrede Boğa gibi eline alıp, bakıp inceleme aşamasından çıkılarak, birden fazla objeyi bir arada algılama ve kavrama aşamasına gelinmiştir. Artık çocuk eylemle düşünceyi birbirine bağlamaya başlamıştır.Bu dönemin en belirgin özelliği konuşmaya başlangıçtır. Boğa döneminde çocuk, duyuları vasıtasıyla algıladığı sesleri taklit eder. Yani diğer insanlar benzeme isteği, onları taklit etme görülür.Koç\'da kendiyle, Boğa\'da objelerle bağlantıları kuran çocuk, artık İkizler\'de etraftaki insanlarla bağlantılar kurmaya başlar. Bu aşamada, hareket halindeki İkizler her zaman genç insanlarla birlikte olmak isterler, çünkü erişkinler kendilerine göre ağır kalır.</string>
    <string name="yengec">YENGEÇ (21 Haziran - 20 Temmuz)\n\nSırtında taşıdığı evi ile bunu çok iyi bir şekilde ifade eden Yengeç, elde tutma ve muhafaza etmeyi sembolize eder. Koruma ve besleme arzusu ile insan göğsünü anlatan bu işaret, anneliğin, taşıyan, olgunlaştıran, besleyip büyüten annenin sembolüdür.Yengecin kıskaçları ve içe çekilişi doğadan ve çevreden gelebilecek zararlara karşı korunma iç güdüsünü sembolize eder. Yengeç dış kabuğunun sertliği sayesinde kendini koruyabilir, ancak içteki yumuşak ve hassas yapısıyla tipik Yengeç özelliğini ifade eder. Çocuk, İkizler aşamasındaki iletişiminde neredeyse bilinçsizdir. Çünkü burada kurulan iletişimin karşılıklı olup olmadığı, cevap alınıp alınmadığı pek önemli değildir. Ancak Yengeç aşamasında kurulan iletişimin, diğerlerinde pozitif ya da negatif duygusal etkiler uyandırıp uyandırılmadığına bakılır. Diğer bir deyişle, çocuğun taklitçilikten kurtulup, karşısındaki insanlarda duygusal etkiler yaratmak için iletişim kurma aşamasına geçmesidir.Kurmaya çalıştığı iletişimin insanlarda, olumlu ya da olumsuz pek çok duygusal etkiler yarattığını kavrayan çocuk, artık ev yapılanmasının ve aileyle olan ilişkilerinin baskın bir şekilde duygusal olduğunun bilincine varır.Aile, çocuğun destekleyen etkiler alabilmek, için her türlü iletişimi kurup, beceri kazanması gereken bir kurumdur. Burada kurulan iletişimin yeterliliği ve yoğunluğu, hissedilen güvenliğin niteliği ve niceliği tamamıyla çocuğun özgürlüğüne olan tutumunu etkiler. Henüz birebir ilişki kurmaya yetkin olmadığı için, duygusal olarak aile içi ilişkilere konsantre olmakta ve düşüncesini buradan aşırtmakta zorlanmaktadır. Bu aşamada aile ile ilişkilerinden kazandığı kavramlar en önemlisi bu türlü olaylara bakışı geri kalan tüm hayatındaki ilişkilerini etkiler. Dolayısıyla, kalıtımsal özelliklerin burada etkin şekilde gözlenmesi de mümkündür.</string>
    <string name="aslan">ASLAN (23 Temmuz - 23 Ağustos)\n\nBu burcun işareti, aslanın yelesini ve kuyruğunu gösterir, sembolik olarak "hayvanlar kralı" nın gücü, kükremesi, kraliyet davranışları Aslan tipi ile özdeşleştirilir.Hiyeroglif\'te aslan, şiddet ve gazabın sembolü olarak kullanılmıştır.Leonitika olarak bilinen festivaller ve kurban verme törenleri, Güneş\'in Aslan burcuna girmesi onuruna, bu devrede düzenlenmekte, ayinleri gerçekleştiren rahiplere de Leones denilmektedir.Persliler tarafından kutlanan bu törenlere Mitra adı verilir. Aslan aşamasında birey çocukluğun tamamlanmasından sonra, ailenin sağladığı güvenlik duygusunun kazandırdığı motivasyonla dışarı açılmaya başlar. Aile ortamında kazandığı, geliştirdiği kişisel özelliklerini dış dünyaya göstermeye başlar. Bunun da ilk dışa vurumları oyunlar ile olur.Evde izole bir şekilde kendi kendine oyun oynayan çocuk bu aşamada artık paylaşabileceği, kendine eşlik edebilecek arkadaşlar edinir. Oyunlarla birlikte belirli düzeyde ilişkiler ve kuralların konması aşamasına gelinir.Bu dönemde bazı oyunların daha gözde olması, daha çok sevilmesi söz konusudur. Çünkü, çocuk belli oyunlarda kendini, benliğini daha rahat ortaya koyup ve daha rahat yansıtabilir. Bu da belli oyunların belli arkadaşlarla oynanmasının tercih edilmesine ve insanlar arasında severek, tercih yapma ve karşılıklı etkileşimler yaşama şansının doğmasına sebep olur.Bu arada, kimi çocuklar sadece kendi koydukları kurallarla oyun oynamak isterken, kimileri de diğerlerinin koyduğu kurallara uymaya razı olabilirler.</string>
    <string name="basak">BAŞAK (24 Ağustos - 23 Eylül)\n\nBazı eski zodyaklarda bu burç yere, yüzükoyun uzanmış yatan bir bakire ile sembolize edilir ve zodyaktaki tek feminen figürdür. Bir elinde sivri uçlu bir asa tutan bakirenin diğer elinde verimliliğin sembolü olan bir başak vardır.Antik zamanlardan bu yana tanrıça İsis, İştar, Persephone ile, hatta daha sonra Bakire Meryem ile özdeşleştirilir. Başak evresinde birey, aileye olan bağımlılığından kurtulmak için değerlerini saptama ve seçimlerini yapma aşamasına gelir.Buradaki temel fonksiyon muhakeme yeteneğidir. Muhakeme ederek, ayırımına vardığı, özümsediği şeyleri bünyesine entegre edip, kendinden bir parça haline getiren Başak, aileye olan bağımlılığından kurtularak, yaşamını devam ettirebilmek için çalışmak zorundadır. Yani kendini, enerjilerini belli bir alana kanalize ederek, tüm detaylarıyla uzmanlaşmak durumundadır. Artık vücut ve ruhun birbirinden ayrılması ve farklılığın anlaşılması söz konusudur.Başak, eğer kendi içinde vücudu-ruhu ile uyum sağlayabilirse sağlığı da iyi olur. Başak\'da seçilen yiyecekler, giyim, egzersiz, eşlik eden insanlar bile sağlık durumunu etkileyebilir.Tüm yapılan seçimlerin birbiri ile uyum içinde olması gerekir. Aynı zamanda vücudun ve ruhun bütün oldukları, uyumla, koordinasyon içinde yaşaması gerektiği benimsenmelidir.</string>
    <string name="nav_home">Burçlar</string>
    <string name="nav_uyum">Burç uyumunu</string>
    <string name="nav_yukselen">Yükselen burç</string>
    <string name="nav_cin">Çin astrolojisi</string>
    <string name="nav_favoriler">Favoriler</string>
    <string name="nav_help">Yardım</string>
    <string name="nav_premium">Premium sürüme geçin</string>
    <string name="nav_about">Hakkımızda</string>
    <string name="nav_puanla">Uygulamayı puanla</string>
    <string name="nav_beta">Beta testine kaydolun</string>
</resources>